[gd_scene load_steps=10 format=3 uid="uid://bgauu3xqmlimv"]

[ext_resource type="Texture2D" uid="uid://77ondl0xtmt2" path="res://Assets/Images/Hank.png" id="1_3p0pq"]
[ext_resource type="Script" path="res://Scenes/Characters/Hank.gd" id="1_v4hj0"]
[ext_resource type="AudioStream" uid="uid://ykg7no6ui8jl" path="res://Assets/Voice/Hank/aint_bothering_you.mp3" id="3_5pitb"]
[ext_resource type="AudioStream" uid="uid://brhn7dpdnutyt" path="res://Assets/Voice/Hank/every_gun.mp3" id="4_1lnfj"]
[ext_resource type="AudioStream" uid="uid://cbigl0oxx7vss" path="res://Assets/Voice/Hank/Huckleberry.mp3" id="5_1r3ua"]
[ext_resource type="AudioStream" uid="uid://cpahaicm5eewg" path="res://Assets/Voice/Hank/stew.mp3" id="6_6wq5p"]
[ext_resource type="AudioStream" uid="uid://bxso8xb1uxcuj" path="res://Assets/Voice/Hank/heyfriend.mp3" id="7_buq6s"]

[sub_resource type="BoxShape3D" id="BoxShape3D_07kur"]
size = Vector3(0.851873, 1, 0.762292)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7lnvg"]
streams_count = 4
random_pitch = 1.0
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("3_5pitb")
stream_0/weight = 1.0
stream_1/stream = ExtResource("4_1lnfj")
stream_1/weight = 1.0
stream_2/stream = ExtResource("6_6wq5p")
stream_2/weight = 1.0
stream_3/stream = ExtResource("5_1r3ua")
stream_3/weight = 1.0

[node name="Hank" type="Node3D"]
script = ExtResource("1_v4hj0")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.449044, 0.0293139, 0, -0.0293139, 0.449044, 0, 0, 0, 0.45, 0, 0, 0)
offset = Vector2(-13.91, 112.53)
texture = ExtResource("1_3p0pq")

[node name="CameraAnchor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.742126, 1.74374)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.582316, 0)
shape = SubResource("BoxShape3D_07kur")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_7lnvg")
volume_db = -6.0

[node name="IntroVoicePlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_buq6s")
volume_db = -6.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
